se agregó la clase de herencia y se agregó la traducción a la clase de clases mágicas

--- a/OOP/4.OOP_code_magic_methods/magic_methods.ipynb
+++ b/OOP/4.OOP_code_magic_methods/magic_methods.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,15 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "class Gaussian():\n",
-    "    \"\"\" Gaussian distribution class for calculating and \n",
-    "    visualizing a Gaussian distribution.\n",
+    "    \"\"\" Clase de distribución gaussiana para calcular y\n",
+    "     visualización de una distribución gaussiana.\n",
     "    \n",
-    "    Attributes:\n",
-    "        mean (float) representing the mean value of the distribution\n",
-    "        stdev (float) representing the standard deviation of the distribution\n",
-    "        data_list (list of floats) a list of floats extracted from the data file\n",
+    "     Atributos:\n",
+    "         media (flotante) que representa el valor medio de la distribución\n",
+    "         stdev (flotante) que representa la desviación estándar de la distribución\n",
+    "         data_list (lista de flotantes) una lista de flotantes extraídos del archivo de datos\n",
     "            \n",
-    "    \"\"\"\n",
+    "     \"\"\"\n",
     "    def __init__(self, mu = 0, sigma = 1):\n",
     "        \n",
     "        self.mean = mu\n",
@@ -40,19 +40,19 @@
     "    \n",
     "    def calculate_mean(self):\n",
     "    \n",
-    "        \"\"\"Method to calculate the mean of the data set.\n",
+    "        \"\"\"Método para calcular la media del conjunto de datos.\n",
     "        \n",
-    "        Args: \n",
-    "            None\n",
+    "         Argumentos:\n",
+    "             Ninguna\n",
     "        \n",
-    "        Returns: \n",
-    "            float: mean of the data set\n",
+    "         Devoluciones:\n",
+    "             float: media del conjunto de datos\n",
     "    \n",
-    "        \"\"\"\n",
+    "         \"\"\"\n",
     "        \n",
-    "        #TODO: Calculate the mean of the data set. Remember that the data set is stored in self.data\n",
-    "        # Change the value of the mean attribute to be the mean of the data set\n",
-    "        # Return the mean of the data set           \n",
+    "        #TODO: Calcular la media del conjunto de datos. Recuerde que el conjunto de datos se almacena en self.data\n",
+    "        # Cambiar el valor del atributo medio para que sea la media del conjunto de datos\n",
+    "        # Devuelve la media del conjunto de datos          \n",
     "        avg = 1.0 * sum(self.data) / len(self.data)\n",
     "        self.mean = avg\n",
     "        \n",
@@ -62,21 +62,21 @@
     "\n",
     "    def calculate_stdev(self, sample=True):\n",
     "\n",
-    "        \"\"\"Method to calculate the standard deviation of the data set.\n",
+    "        \"\"\"Método para calcular la desviación estándar del conjunto de datos.\n",
     "        \n",
-    "        Args: \n",
-    "            sample (bool): whether the data represents a sample or population\n",
+    "         Argumentos:\n",
+    "             muestra (bool): si los datos representan una muestra o población\n",
     "        \n",
-    "        Returns: \n",
-    "            float: standard deviation of the data set\n",
+    "         Devoluciones:\n",
+    "             float: desviación estándar del conjunto de datos\n",
     "    \n",
-    "        \"\"\"\n",
-    "        # TODO:\n",
-    "        #   Calculate the standard deviation of the data set\n",
-    "        #   \n",
-    "        #   The sample variable determines if the data set contains a sample or a population\n",
-    "        #   If sample = True, this means the data is a sample. \n",
-    "        #   Keep the value of sample in mind for calculating the standard deviation\n",
+    "         \"\"\"\n",
+    "         # HACER:\n",
+    "         # Calcular la desviación estándar del conjunto de datos\n",
+    "         #\n",
+    "         # La variable muestra determina si el conjunto de datos contiene una muestra o una población\n",
+    "         # Si muestra = Verdadero, esto significa que los datos son una muestra.\n",
+    "         # Tenga en cuenta el valor de la muestra para calcular la desviación estándar\n",
     "        if sample:\n",
     "            n = len(self.data) - 1\n",
     "        else:\n",
@@ -87,7 +87,7 @@
     "            sigma += (d - mean) ** 2\n",
     "        sigma = math.sqrt(sigma / n)\n",
     "        \n",
-    "        #   Make sure to update self.stdev and return the standard deviation as well    \n",
+    "        # Asegúrese de actualizar self.stdev y devolver la desviación estándar también   \n",
     "        self.stdev = sigma\n",
     "        \n",
     "        return self.stdev\n",
@@ -95,19 +95,19 @@
     "\n",
     "    def read_data_file(self, file_name, sample=True):\n",
     "    \n",
-    "        \"\"\"Method to read in data from a txt file. The txt file should have\n",
-    "        one number (float) per line. The numbers are stored in the data attribute. \n",
-    "        After reading in the file, the mean and standard deviation are calculated\n",
+    "        \"\"\"Método para leer datos de un archivo txt. El archivo txt debería tener\n",
+    "         un número (flotante) por línea. Los números se almacenan en el atributo de datos.\n",
+    "         Después de leer el archivo, se calculan la media y la desviación estándar\n",
     "                \n",
-    "        Args:\n",
-    "            file_name (string): name of a file to read from\n",
+    "         Argumentos:\n",
+    "             file_name (cadena): nombre de un archivo para leer\n",
     "        \n",
-    "        Returns:\n",
-    "            None\n",
+    "         Devoluciones:\n",
+    "             Ninguna\n",
     "        \n",
-    "        \"\"\"\n",
+    "         \"\"\"\n",
     "        \n",
-    "        # This code opens a data file and appends the data to a list called data_list\n",
+    "        # Este código abre un archivo de datos y agrega los datos a una lista llamada data_list\n",
     "        with open(file_name) as file:\n",
     "            data_list = []\n",
     "            line = file.readline()\n",
@@ -116,29 +116,29 @@
     "                line = file.readline()\n",
     "        file.close()\n",
     "    \n",
-    "        # TODO: \n",
-    "        #   Update the self.data attribute with the data_list\n",
-    "        #   Update self.mean with the mean of the data_list. \n",
-    "        #       You can use the calculate_mean() method with self.calculate_mean()\n",
-    "        #   Update self.stdev with the standard deviation of the data_list. Use the \n",
-    "        #       calcaulte_stdev() method.\n",
+    "        # HACER:\n",
+    "        # Actualice el atributo self.data con data_list\n",
+    "        # Actualice self.mean con la media de data_list.\n",
+    "        # Puede usar el método de cálculo de la media () con self.calculate_mean ()\n",
+    "        # Actualice self.stdev con la desviación estándar de data_list. Utilizar el\n",
+    "        # método calcaulte_stdev().\n",
     "        self.data = data_list\n",
     "        self.mean = self.calculate_mean()\n",
     "        self.stdev = self.calculate_stdev(sample)\n",
     "        \n",
     "    def plot_histogram(self):\n",
-    "        \"\"\"Method to output a histogram of the instance variable data using \n",
-    "        matplotlib pyplot library.\n",
+    "        \"\"\"Método para generar un histograma de los datos de la variable de instancia utilizando\n",
+    "         librería de pyplot matplotlib.\n",
     "        \n",
-    "        Args:\n",
-    "            None\n",
+    "         Argumentos:\n",
+    "             Ninguna\n",
     "            \n",
-    "        Returns:\n",
-    "            None\n",
-    "        \"\"\"\n",
+    "         Devoluciones:\n",
+    "             Ninguna\n",
+    "         \"\"\"\n",
     "        \n",
-    "        # TODO: Plot a histogram of the data_list using the matplotlib package.\n",
-    "        #       Be sure to label the x and y axes and also give the chart a title\n",
+    "        # TODO: Trace un histograma de data_list usando el paquete matplotlib.\n",
+    "        # Asegúrese de etiquetar los ejes x e y y también asigne un título al gráfico\n",
     "        plt.hist(self.data)\n",
     "        plt.title('Histogram of Data')\n",
     "        plt.xlabel('data')\n",
@@ -147,35 +147,35 @@
     "                \n",
     "        \n",
     "    def pdf(self, x):\n",
-    "        \"\"\"Probability density function calculator for the gaussian distribution.\n",
+    "        \"\"\"Calculadora de función de densidad de probabilidad para la distribución gaussiana.\n",
     "        \n",
-    "        Args:\n",
-    "            x (float): point for calculating the probability density function\n",
+    "         Argumentos:\n",
+    "             x (flotante): punto para calcular la función de densidad de probabilidad\n",
     "            \n",
     "        \n",
-    "        Returns:\n",
-    "            float: probability density function output\n",
-    "        \"\"\"\n",
+    "         Devoluciones:\n",
+    "             float: salida de la función de densidad de probabilidad\n",
+    "         \"\"\"\n",
     "        \n",
-    "        # TODO: Calculate the probability density function of the Gaussian distribution\n",
-    "        #       at the value x. You'll need to use self.stdev and self.mean to do the calculation\n",
+    "         # TODO: Calcular la función de densidad de probabilidad de la distribución Gaussiana\n",
+    "         # en el valor x. Deberá usar self.stdev y self.mean para hacer el cálculo\n",
     "        return (1.0 / (self.stdev * math.sqrt(2*math.pi))) * math.exp(-0.5*((x - self.mean) / self.stdev) ** 2)\n",
     "    \n",
     "    def plot_histogram_pdf(self, n_spaces = 50):\n",
     "\n",
-    "        \"\"\"Method to plot the normalized histogram of the data and a plot of the \n",
-    "        probability density function along the same range\n",
+    "        \"\"\"Método para trazar el histograma normalizado de los datos y un gráfico de los\n",
+    "         función de densidad de probabilidad a lo largo del mismo rango\n",
     "        \n",
-    "        Args:\n",
-    "            n_spaces (int): number of data points \n",
+    "         Argumentos:\n",
+    "             n_spaces (int): número de puntos de datos\n",
     "        \n",
-    "        Returns:\n",
-    "            list: x values for the pdf plot\n",
-    "            list: y values for the pdf plot\n",
+    "         Devoluciones:\n",
+    "             lista: valores x para la gráfica pdf\n",
+    "             lista: valores de y para la gráfica de pdf\n",
     "            \n",
-    "        \"\"\"\n",
+    "         \"\"\"\n",
     "        \n",
-    "        #TODO: Nothing to do for this method. Try it out and see how it works.\n",
+    "         #TODO: Nada que hacer para este método. Pruébelo y vea cómo funciona.\n",
     "        \n",
     "        mu = self.mean\n",
     "        sigma = self.stdev\n",
@@ -183,19 +183,19 @@
     "        min_range = min(self.data)\n",
     "        max_range = max(self.data)\n",
     "        \n",
-    "         # calculates the interval between x values\n",
+    "        # calcula el intervalo entre los valores de x\n",
     "        interval = 1.0 * (max_range - min_range) / n_spaces\n",
     "\n",
     "        x = []\n",
     "        y = []\n",
     "        \n",
-    "        # calculate the x values to visualize\n",
+    "        # calcular los valores de x para visualizar\n",
     "        for i in range(n_spaces):\n",
     "            tmp = min_range + interval*i\n",
     "            x.append(tmp)\n",
     "            y.append(self.pdf(tmp))\n",
     "\n",
-    "        # make the plots\n",
+    "        # haz los gráficos\n",
     "        fig, axes = plt.subplots(2,sharex=True)\n",
     "        fig.subplots_adjust(hspace=.5)\n",
     "        axes[0].hist(self.data, density=True)\n",
@@ -211,59 +211,59 @@
     "\n",
     "    def __add__(self, other):\n",
     "        \n",
-    "        \"\"\"Magic method to add together two Gaussian distributions\n",
+    "        \"\"\"Método mágico para sumar dos distribuciones gaussianas\n",
     "        \n",
-    "        Args:\n",
-    "            other (Gaussian): Gaussian instance\n",
+    "         Argumentos:\n",
+    "             otro (gaussiano): instancia gaussiana\n",
     "            \n",
-    "        Returns:\n",
-    "            Gaussian: Gaussian distribution\n",
+    "         Devoluciones:\n",
+    "             Gaussiana: distribución gaussiana\n",
     "            \n",
     "        \"\"\"\n",
     "        \n",
-    "        # TODO: Calculate the results of summing two Gaussian distributions\n",
-    "        #   When summing two Gaussian distributions, the mean value is the sum\n",
-    "        #       of the means of each Gaussian.\n",
+    "        # TODO: Calcular los resultados de sumar dos distribuciones gaussianas\n",
+    "        # Al sumar dos distribuciones gaussianas, el valor medio es la suma\n",
+    "        # de las medias de cada gaussiana.\n",
     "        #\n",
-    "        #   When summing two Gaussian distributions, the standard deviation is the\n",
-    "        #       square root of the sum of square ie sqrt(stdev_one ^ 2 + stdev_two ^ 2)\n",
+    "        # Al sumar dos distribuciones gaussianas, la desviación estándar es la\n",
+    "        # raíz cuadrada de la suma de los cuadrados, es decir, sqrt(stdev_one ^ 2 + stdev_two ^ 2)\n",
     "        \n",
-    "        # create a new Gaussian object\n",
+    "        # crear un nuevo objeto Gaussiano\n",
     "        result = Gaussian()\n",
     "        \n",
-    "        # TODO: calculate the mean and standard deviation of the sum of two Gaussians\n",
-    "        # change this line to calculate the mean of the sum of two Gaussian distributions\n",
+    "        # TODO: calcular la media y la desviación estándar de la suma de dos gaussianas\n",
+    "         # cambie esta línea para calcular la media de la suma de dos distribuciones gaussianas\n",
     "        result.mean = self.mean + other.mean\n",
-    "        # change this line to calculate the standard deviation of the sum of two Gaussian distributions\n",
+    "        # cambie esta línea para calcular la desviación estándar de la suma de dos distribuciones gaussianas\n",
     "        result.stdev = math.sqrt(self.stdev ** 2 + other.stdev ** 2)\n",
     "        \n",
     "        return result\n",
     "\n",
     "    def __repr__(self):\n",
     "    \n",
-    "        \"\"\"Magic method to output the characteristics of the Gaussian instance\n",
+    "        \"\"\"Método mágico para generar las características de la instancia gaussiana\n",
     "        \n",
-    "        Args:\n",
-    "            None\n",
+    "         Argumentos:\n",
+    "             Ninguna\n",
     "        \n",
-    "        Returns:\n",
-    "            string: characteristics of the Gaussian\n",
+    "         Devoluciones:\n",
+    "             cadena: características de la Gaussiana\n",
     "        \n",
-    "        \"\"\"\n",
+    "         \"\"\"\n",
     "        \n",
-    "        # TODO: Return a string in the following format - \n",
-    "        # \"mean mean_value, standard deviation standard_deviation_value\"\n",
-    "        # where mean_value is the mean of the Gaussian distribution\n",
-    "        # and standard_deviation_value is the standard deviation of\n",
-    "        # the Gaussian.\n",
-    "        # For example \"mean 3.5, standard deviation 1.3\"\n",
+    "         # TODO: Devuelve una cadena en el siguiente formato -\n",
+    "         # \"valor_medio medio, desviación estándar valor_desviación_estándar\"\n",
+    "         # donde mean_value es la media de la distribución Gaussiana\n",
+    "         # y standard_deviation_value es la desviación estándar de\n",
+    "         # el gaussiano.\n",
+    "         # Por ejemplo, \"media 3,5, desviación estándar 1,3\"\n",
     "        \n",
     "        return \"mean {}, standard deviation {}\".format(self.mean, self.stdev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "<unittest.runner.TextTestResult run=6 errors=0 failures=0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
